# mlir-converter

./: .gitmodules  CMakeLists.txt  README.md
converter/: CMakeLists.txt  converter.cpp  frontend.cpp  frontend.h  utils.h
converter/mlir_frontend/: SampleNet.mlir  frontend.cpp  frontend.h
converter/onnx_frontend/: quantnet.onnx
converter/python_frontend/: frontend.cpp  frontend.h  predefined_model.py
examples/: QuantNet.mlir  TensorMatmul.mlir  TensorMatmulFinalize.mlir
include/Pipeline/: Passes.h
include/quant-ext-opt/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/quant-ext-opt/Conversion/ONNXToQuant/: ONNXToQuant.h
include/quant-ext-opt/Pipeline/: Passes.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  PassDetail.h  Passes.cpp
lib/Conversion/ONNXToQuant/: CMakeLists.txt  ONNXToQuant.cpp
lib/Pipeline/: CMakeLists.txt  LowerONNXToMLIR.cpp  LowerTorchToLLVMIR.cpp  Passes.cpp
src/: CMakeLists.txt
tools/: CMakeLists.txt
tools/quant-ext-cpu-runner/: CMakeLists.txt  quant-ext-cpu-runner.cpp
tools/quant-ext-opt/: CMakeLists.txt  quant-ext-opt.cpp
tools/torch-ext-opt/: CMakeLists.txt  torch-ext-opt.cpp
