add_llvm_executable(torch-ext-opt torch-ext-opt.cpp)

get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
get_property(conversion_libs GLOBAL PROPERTY MLIR_CONVERSION_LIBS)

target_link_libraries(torch-ext-opt PRIVATE 
# ${dialect_libs}
# ${conversion_libs}
MLIROptLib
TorchMLIRInitAll
TorchMLIRTorchDialect
TorchMLIRTorchConversionDialect
TorchMLIRTMTensorPasses
TorchMLIRTMTensorDialect
TorchMLIRTorchPasses
TorchMLIRTorchConversionPasses
TorchMLIRConversionPasses
TorchMLIRRefBackend
MLIRMathTransforms
TorchMLIRTorchConversionToMLProgram
TorchMLIRTorchToArith
TorchMLIRTorchToLinalg
TorchMLIRTorchToSCF
TorchMLIRTorchToStablehlo
TorchMLIRTorchToTMTensor
TorchMLIRTorchToTosa
TorchMLIRTorchUtils
TorchMLIRConversionUtils
MhloPasses
MLIRAnalysis
MhloDialect
MhloAnalysis
MhloToLinalg
MhloToArithmeticConversion
StablehloOps
StablehloPasses
StablehloRegister
StablehloBase
StablehloToMhlo
StablehloTypeConversion
StablehloTypeInference
StablehloAssemblyFormat
ChloOps
ChloPasses
HloOpsCommon
HloToLinalgUtils
THLODialect
StablehloBroadcastUtils
MhloScatterUtils
MhloTypeConversion
MLIRMhloUtils
${dialect_libs}
${conversion_libs})
